# chaos-ntp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: client.rs  config.rs  lib.rs  logger.rs  main.rs  ntp.rs  response_strategy.rs  server.rs
src/ntp/: constants.rs  mod.rs  parser.rs  types.rs
src/ntp/tests/: mod.rs  parser.rs  types.rs
