[package]
name = "chaos-ntp"

version = "0.1.0"
authors = ["plates"]
description = "time desynchronization service"
edition = "2018"

repository = "https://github.com/plaets/chaos-ntp/"
readme = "README.md"
license = "MIT"

[dependencies]
nom = "6.0.1"
byteorder = "1.3.4"
num_enum = "0.5.1"
simple-error = "0.2.2"
rand = "0.7.3"
derive_more = "0.99.0"

