[package]
name = "chaos-ntp"

version = "0.1.0"
authors = ["plates"]
description = "time desynchronization service"
edition = "2018"

repository = "https://github.com/plaets/chaos-ntp/"
readme = "README.md"
license = "MIT"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "chaos-ntp"
path = "src/main.rs"

[dependencies]
nom = "6.0.1"
byteorder = "1.3.4"
num_enum = "0.5.1"

simple-error = "0.2.2"
derive_more = "0.99.0"

slog = "2.7"
slog-term = "2.6.0"
slog-async = "2.5"
slog-scope = "4.3"

chrono = "0.4"
rand = "0.7.3"

clap = "2.33.3"

[profile.release]
lto = true

