[package]
name = "chaos-ntp"

version = "0.1.0"
authors = ["plates"]
description = "time desynchronization service"
edition = "2018"

repository = "https://github.com/plaets/chaos-ntp/"
readme = "README.md"
license = "MIT"

[dependencies]
nom = "6.0"
byteorder = "1.3"
num_enum = "0.5"

simple-error = "0.2"
derive_more = "0.99"

slog = "2.7"
slog-term = "2.6"
slog-async = "2.5"
slog-scope = "4.3"

chrono = "0.4"
rand = "0.7"

clap = "2.33"
config = "0.10"
inventory = "0.1"
paste = "1.0"

[profile.release]
lto = true

